Sat Feb  6 14:37:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c, test/ruby/enc/test_case_mapping.rb: Implemented :fold
	  option for String#downcase by using case folding data from
	  regular expression engine, and added a few simple tests.
	  (with Kimihito Matsui)

Fri Feb  5 20:08:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: added tests for :ascii option.
	  (with Kimihito Matsui)

Fri Feb  5 12:22:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): Use int128_t for overflow detection.

	* bignum.c (rb_uint128t2big): added for opt_mult.

	* bignum.c (rb_uint128t2big): added for rb_uint128t2big..

	* configure.in: define int128_t, uint128_t and related MACROs.
	  Initially introduced by r41379 but reverted by r50749.

Thu Feb  4 21:05:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Activated :ascii flag for ASCII-only case conversion
	  (with Kimihito Matsui)

Thu Feb  4 17:38:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (reg_set_source): make source string frozen without
	  copying.

	* re.c (rb_reg_initialize_m): refactor initialization with
	  encoding.

Thu Feb  4 15:35:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring_enc_new, rb_fstring_enc_cstr): functions to
	  make fstring with encoding.

Thu Feb  4 14:42:29 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added Unicode data file SpecialCasing.txt to be additionally
	  downloaded (with Kimihito Matsui)

Thu Feb  4 12:39:08 2016  joker1007  <kakyoin.hierophant@gmail.com>

	* cgi/escape/escape.c: Optimize CGI.escape performance by C ext
	  for ASCII-compatible encodings.  [Fix GH-1238]

Thu Feb  4 11:53:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Introduce two variables (UNICODE_DATA_DIR and
	  UNICODE_SRC_DATA_DIR) to eliminate repetitions.

Wed Feb  3 12:13:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>
